Hololive ID DONEE

--- a/index.html
+++ b/index.html
@@ -3234,58 +3234,175 @@
         </div>
 
         <!--Kureiji Ollie-->
-        <div class="bg-modal-Aiofi">
+        <div class="bg-modal-Kollie">
             <div class="modal-content">
-                <div class="closepop-Aiofi">+</div>
+                <div class="closepop-Kollie">+</div>
                 <div class="column-left">
-                    <img src="Photos/Profile/ID/Airani.jpg" alt="Missing image" style="width:100%;height:38%;">
-                    <p class="talentp" style="color:black;text-align:center;"><strong>「Iofi」</strong>"Erofi"<br>🎨</p>
+                    <img src="Photos/Profile/ID/Ollie.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Ollie」</strong>"Simp Ollie"<br>🧟‍♀️</p>
                     <div class="socialbar">
                         <br><br>
                         <h3 style="margin: 0;">Social Media: </h3>
-                        <a href="https://twitter.com/airaniiofifteen" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <a href="https://twitter.com/kureijiollie" class="twitter"><i class="fa fa-twitter"></i></a> 
                         <br>
-                        <a href="https://www.youtube.com/channel/UCAoy6rzhSf4ydcYjJw3WoVg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                        <a href="https://www.youtube.com/channel/UCYz_5n-uDuChHtLo7My1HnQ" class="youtube"><i class="fa fa-youtube"></i></a> 
                     </div>
                 </div>
                 <div class="column-right">
                     <div class="infotopleft">
-                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Aiofi-jpname"></h3>
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Kollie-jpname"></h3>
                         <div class="inforow">
                             <h3 style="margin: 0;">Age: </h3>
-                            <h3 style="margin: 0;" id="Aiofi-age"></h3>
+                            <h3 style="margin: 0;" id="Kollie-age"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Gender: </h3>
-                            <h3 style="margin: 0;" id="Aiofi-gender"></h3>
+                            <h3 style="margin: 0;" id="Kollie-gender"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Birthday: </h3>
-                            <h3 style="margin: 0;" id="Aiofi-bday"></h3>
+                            <h3 style="margin: 0;" id="Kollie-bday"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Height: </h3>
-                            <h3 style="margin: 0;" id="Aiofi-height"></h3>
+                            <h3 style="margin: 0;" id="Kollie-height"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Status: </h3>
-                            <h3 style="margin: 0;" id="Aiofi-status"></h3>
+                            <h3 style="margin: 0;" id="Kollie-status"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Designer: </h3>
-                            <h3 style="margin: 0;"><a href="https://twitter.com/mituk1">Yano Mitsuki</a></h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/ramdayo1122">LAM</a></h3>
                         </div>
                     </div>
-                    <iframe class="infotopright" src="https://www.youtube.com/embed/o6BYp7nJ_B0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/piThivhSHNQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            "Obisa!" Iofi is a cute and friendly alien that is prone to panicking when something doesn't go her way.
-                            She is very knowledgeable about Indonesian cultures and even dialects and is a very good digital artist.
-                            Iofi is a pentalingual, able to understand and speak five languages which are English, Indonesian malay,
-                            Korean, German and Japanese. She is also known to be a little dirty minded even talking about her favourite
-                            R18 artists on stream in the past. Iofi is also part of a group within hololive Indonesia called "AREA 15",
-                             together with fellow members Hoshinova Moona and Ayunda Risu. Her content is primarily gaming with the chatting and
-                             singing streams here and there in which chatting streams are sometimes categorised into English and Indonesian.
+                            "Zombanwa" Ollie is a fast-talking, loud and extremely hyperenergetic high-school girl zombie that had been raised from the
+                            dead with a sword stabbed right into her head and part of hololive Indonesia's 2nd generation with Anya Melfissa and Pavolia Reine.
+                             She is very knowledgeable about internet and meme-culture often engaging in such
+                            activities. Her hobbies include eating, cooking, art, reading and simping of many members of hololive, 
+                            in particular simping for fellow holomember Natsuiro
+                            Matsuri, oftenly being extremely energetic around her tossing phrases like "Love you" constantly and attempt to make her "marry" her.
+                            Ollie likes eating but there are some exceptions, like coffee, fruits, especially cabbages and tomatoes. Her content is primarily gaming
+                            of various varieties and the occasional chatting stream, art stream and memes. Ollie's body parts are also detachable, as aspected from a zombie.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Anya Melfissa-->
+        <div class="bg-modal-anya">
+            <div class="modal-content">
+                <div class="closepop-anya">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/ID/Anya.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Anya」</strong>"Chunchunmaru"<br>🍂</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/anyamelfissa" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UC727SQYUvx5pDDGQpTICNWg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="anya-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="anya-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="anya-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="anya-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="anya-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="anya-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/ekureea">Uekara Eku</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/dd-aAKjGLAg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            Anya is a very calm, nervous and more introverted malay sword called a "Kris" created by her master, given human
+                            form as a cute girl. She likes to sleep and have afinity towards gacha games, especially Fate Grand Order as she has been
+                            in love with the Fate series for a very long time. Anya also has Yandere aspects to her character as described by her fans
+                            when she played the game "Mad Father", rather than being scared at the game, they were scared of her. Despite everything however,
+                            Anya is also someone who is easy to joke around and chill with, even though sometimes her jokes can sound a bit harsh like calling
+                            fellow member Kureiji Ollie a cutting board, but it is done with no harm intended.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Pavolia Reine-->
+        <div class="bg-modal-Preine">
+            <div class="modal-content">
+                <div class="closepop-Preine">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/ID/Reine.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Reine」</strong>"Turkey"<br>🦚</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/pavoliareine" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UChgTyjG-pdNvxxhdsXfHQ5Q" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Preine-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Preine-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Preine-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Preine-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Preine-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Preine-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/lizhi3">Iida Pochi</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/onhGlvuvl0U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "Konreine" Reine is a more composed, adult and elegant lady of the peafowl from another world. Despite her high standing,
+                            she doesn't hold back in showcasing her more gentle and down to earth aspects. She actively tries to
+                            socialise with her seniors of hololive and has a wonderful relationship with her gen-mates of hololive
+                            generation 2, Kureiji Ollie and Anya Melfissa. Reine likes sweets, things that shine and stuffed toys while her
+                            hobbies are singing, drawing, reading fanfiction and afternoon tea. However, her dislikes are very spicy food
+                             and cleaning. She primarily streams gaming content with Brunch streams oftenly and the occasional singing stream.
                         </p>
                     </div>
                 </div>
