Fixed some wording of Okayu Completed ID

--- a/index.html
+++ b/index.html
@@ -2285,7 +2285,7 @@
                              stealing the onigiri(riceball) of fellow member Shirakami Fubuki, and showed no repentance for it. Which she was found guilty for along with other cases
                              by judge Ookami Mio in "Okayu Court" and sentenced to jail in Minecraft, in which she has to build and serve her sentence.
                               Despite her normal calm demeanor, she has her emotional side as well, sometimes breaking down crying while playing games like Zelda: Link's Awakening.
-                              She is known to be quite close to fellow member Inugami Korone, making it quite abvious they knew each other before joining hololive. Their wholesome interactions
+                              She is known to be quite close to fellow member Inugami Korone, making it quite obvious they knew each other before joining hololive. Their wholesome interactions
                               have led the hololive community to ship them as "OkaKoro". Her content is primarily gaming, with the occasional singing and ASMR streams She is also part of a group with other hololive members called "OKFAMS"
                               with members being "Nekomata Okayu", "Inugami Korone", "Shirakami Fubuki", "Nakiri Ayame", "Ookami Mio" and "Oozora Subaru".
                         </p>
