--- a/index.html
+++ b/index.html
@@ -3286,7 +3286,7 @@
                             in particular simping for fellow holomember Natsuiro
                             Matsuri, oftenly being extremely energetic around her tossing phrases like "Love you" constantly and attempt to make her "marry" her.
                             Ollie likes eating but there are some exceptions, like coffee, fruits, especially cabbages and tomatoes. Her content is primarily gaming
-                            of various varieties and the occasional chatting stream, art stream and memes. Ollie's body parts are also detachable, as aspected from a zombie.
+                            of various varieties and the occasional chatting stream, art stream and memes. Ollie's body parts are also detachable, as expected from a zombie.
                         </p>
                     </div>
                 </div>
