Added Hololive English

--- a/index.html
+++ b/index.html
@@ -3409,6 +3409,291 @@
             </div>
         </div>
 
+        <!--Takanashi Kiara-->
+        <div class="bg-modal-kiara">
+            <div class="modal-content">
+                <div class="closepop-kiara">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/EN/Kiara.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Kiara」</strong>"Chicken"<br>🐔</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/takanashikiara" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCHsx4Hqa-1ORjQTh9TYDhww" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Kiara-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Kiara-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Kiara-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Kiara-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Kiara-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Kiara-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/hukeweb">huke</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/eL9JQumjHJs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            This immortal phoenix has arrived in Hololive, and she wants the heart of Mori?! She is mocked to be a chicken, even
+                            having her emoji as a chicken and calling her fan base Kiara Fan Club(KFC). She has set her eyes dead straight on 
+                            Mori and lucky for her, she can't be killed, or she would face the wrath of death itself. She is great at languages, 
+                            bring a polyglot, fluent in English, Japanese, German and Bird(What even is this). Her favourite senior is Usada 
+                            Pekora, even doing her laugh in her debut strean, which caught the attention of Pekora herself.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Takanashi Kiara-->
+        <div class="bg-modal-mori">
+            <div class="modal-content">
+                <div class="closepop-mori">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/EN/Mori.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Mori Calliope」</strong>"Reaper Rapper"<br>💀</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/moricalliope" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCL_qhgtOy0dy1Agp8vkySQg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Mori-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Mori-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Mori-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Mori-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Mori-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Mori-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/y_k_sme">yukisame</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/SXBla6USb78" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            Mori Calliope, not Cantaloupe, and deffinitely not ca-lee-oh-pee. It's 
+                            cuh-ly-uh-pee, so many people get it wrong! Not to mention she hates cantalouprd. This reaper reigning from
+                            the Underworld has come not to reap our souls, but to understand us humans. This reaper is fascinated and 
+                            wants to learn more about us and our culture. Although she may not be human, she is down to earth, and don't forget 
+                            she is an amazing rapper that you should not battle against.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Ninomae Ina'nis-->
+        <div class="bg-modal-ina">
+            <div class="modal-content">
+                <div class="closepop-ina">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/EN/Ina.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Ina'nis」</strong>"Ina"<br>🐙</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/ninomaeinanis" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCMwGHR0BTZuLsmjY_NT5Pwg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Ina-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Ina-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Ina-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Ina-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Ina-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Ina-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/kuroboshi">Kuroboshi Kouhaku</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/-Aenybcitkc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            Ina was nothing but an ordinary girl, but after an encounter with a book, she started to have tentace controlling power.
+                            She has also started hearing rebalations and thus joined Hololive to check on the humans, despite being one herself.
+                            She is also a talented trilingual, speaking Korean, Japanese and English. She loves food, gaming, reading and drawing, and 
+                            despises cucumber and bugs. Her personality is one that is cute and innocent, which some find adorable. Besides linguistic talent, 
+                            she is an amazing artist, even drawing some art of herself and drawing Mori Callope's EP Cover.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Ninomae Ina'nis-->
+        <div class="bg-modal-gura">
+            <div class="modal-content">
+                <div class="closepop-gura">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/EN/Gura.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Gawr Gura」</strong>"a"<br>🔱</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/gawrgura" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCoSrY_IQQVpmIRZ9Xf-y93g" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Gura-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Gura-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Gura-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Gura-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Gura-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Gura-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/amsrntk3">Amashiro Natsuki</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/uydZpb_F7So" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            This apex predator of the sea has come to... game?! This adorable shark has come to play. But don't
+                            be fooled, this shark is a beast at rhythm games. She is also the most popular idol in the company, being the first 
+                            to reach 2 million subscribers on YouTube, and it all started with her saying "a" on her debut. Despite her old age, 
+                            she is rather small, and she rationalises this as aerodynamics. She is an absolute foodie and hates hot sand, she also 
+                            fears the viewers hearing her stomach growl.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Ninomae Ina'nis-->
+        <div class="bg-modal-watson">
+            <div class="modal-content">
+                <div class="closepop-watson">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/EN/Watson.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Amelia Watson」</strong>"Ame"<br>🔍🔎</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/watsonameliaen" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Watson-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Watson-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Watson-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Watson-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Watson-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Watson-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/nab0i">Nabi</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/42QhdIradBc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "It is elementary, my dear Watson." This Sherlock-inspired detective has come to investigate Hololive English.
+                            She has a fake identity to ensure her exostance is kept quiet, and she even puts on a fake accent. She has a passion 
+                            for literature, even a rap about Dr. Seuss was made from her by a fan.(Take it slowly, this detective is dangerous)
+                            Everything stated about her is fake, for obvious reasons, and who knows what lies beyond that facade of hers. She is also a beast at gaming, 
+                            playing Osu!Mania, CS:GO and Apex Legends like a pro, be sure to be on her party this time.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
     </body>
